--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "headers": [
     {
-      "source": "/(.*).(js|css|mp3|ico)",
+      "source": "/(.*).(js|css|ogg|ico)",
       "headers": [
         {
           "key": "Cache-Control",
